# PdfiumAndroid

./: .gitignore  README.md  build.gradle  jitpack.yml
.github/workflows/: pdfium-android-build.yml  single.yml
gradle/wrapper/: gradle-wrapper.properties
src/main/cpp/: CMakeLists.txt
src/main/java/com/shockwave/pdfium/: PdfiumCore.java
src/main/jni/: Android.mk
